--- a/TrafficCop/ForgetPassWordViewController.xib
+++ b/TrafficCop/ForgetPassWordViewController.xib
@@ -20,6 +20,13 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5pi-HZ-BoI">
                     <rect key="frame" x="0.0" y="60" width="320" height="508"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="email.png" translatesAutoresizingMaskIntoConstraints="NO" id="ktL-oq-3ZG">
+                            <rect key="frame" x="39" y="120" width="24" height="24"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </imageView>
+                    </subviews>
                 </scrollView>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Nv-lr-hlt">
                     <rect key="frame" x="0.0" y="1" width="320" height="60"/>
@@ -36,7 +43,7 @@
                             </connections>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="traffic_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Qg9-dl-l5B">
-                            <rect key="frame" x="108" y="14" width="105" height="26"/>
+                            <rect key="frame" x="108" y="16" width="105" height="26"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </imageView>
@@ -51,6 +58,7 @@
     </objects>
     <resources>
         <image name="arrow-left.png" width="48" height="48"/>
+        <image name="email.png" width="50" height="50"/>
         <image name="traffic_logo.png" width="450" height="94"/>
     </resources>
 </document>
